# network-forensics-openenv

./: .dockerignore  .gitignore  Dockerfile  MCP_INTERFACES.md  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
pcaps/: easy_task.json  easy_task.pcap  hard_task.json  hard_task.pcap  medium_task.json  medium_task.pcap
scripts/: build_task_pcaps.py
server/: __init__.py  app.py  gradio_ui.py  mcp_network_forensics_environment.py  mcp_standard_server.py  network_forensics_environment.py
src/: graph.py  pcap_generator.py  reward.py
src/tasks/: easy.py  hard.py  medium.py
